--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,1 @@
-indexPageGreeting : Index Page Request has been made from Property!!
+indexPageGreeting : Index Page Request has been made from Property from main branch from remote repo!!
