--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,1 @@
-indexPageGreeting : Index Page Request has been made from Property from main branch from remote repo which is changing; it changed again and again!! I like chess
+indexPageGreeting : Index Page Request has been made from Property from main branch from remote repo which is changing; it changed again and again!! I like chess and i am trying to be better at it
