--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,3 @@
-indexPageGreeting : Index Page Request has been made from Property from main branch from remote repo;
+indexPageGreeting : "Index Page Request has been made from Property from main branch from remote repo;"
 
-fixedDelayRate : 60000
+updateConfigCronJobScheduleString : "0 0/1 * 1/1 * ?"
