--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,3 @@
-indexPageGreeting : "Index Page Request has been made from Property from main branch from remote repo;"
+indexPageGreeting : "Givng Demo to Hedge"
 
 updateConfigCronJobScheduleString : "0 0/1 * 1/1 * ?"
