--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,3 @@
-indexPageGreeting : "Givng Demo to Ratan"
+indexPageGreeting : "Givng Demo to Ratan on 14th December 2020"
 
 updateConfigCronJobScheduleString : "0 0/1 * 1/1 * ?"
